<resources>
    <string name="app_name">Onboarding Join</string>
    <string name="chat">Chat with friend</string>
    <string name="have">Have your conversations and share your </string>
    <string name="have2">thoughts in private chats. </string>
    <string name="next">Next. </string>
    <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="lorem2">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="orga">organizer</string>
    <string name="love">740</string>
    <string name="komen">302</string>
    <string name="time">10h</string>
    <string name="title">TITLE</string>
    <string name="desc">DESCRIPTION</string>
    <string name="desc2">DESKRIPSI EVENT</string>
    <string name="upload">UPLOAD</string>
    <string name="loc">LOCATION</string>
    <string name="date">DATE & TIME</string>
    <string name="tglawal">Event Start*</string>
    <string name="tglawal2">02/08/2019</string>
    <string name="wktuawal">Start Time</string>
    <string name="wktuawal2">7:00 PM</string>
    <string name="tglakhir">Event Ends*</string>
    <string name="tglakhir2">02/08/2019</string>
    <string name="wktuakhir">End Time</string>
    <string name="wktuakhir2">10:00 PM</string>
    <string name="lock">SET PRIVACY</string>
    <string name="app">APPLICATION</string>
    <string name="form">FORM</string>
    <string name="photo">PHOTO</string>


</resources>
