<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".article">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingTop="0dp"
        android:visibility="visible">
        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:visibility="visible">
            <TextView
                android:id="@+id/Ttitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"

                android:text="@string/title"
                android:textAppearance="@style/lorem1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="8sp"/>
            <EditText
                android:id="@+id/Ehashtag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line"
                android:ems="10"
                android:maxLength="30"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@drawable/cursor_campaign"
                android:textSize="10sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/desc"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:visibility="visible">
            <TextView
                android:id="@+id/Tdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/desc"
                android:textAppearance="@style/lorem1"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="8sp"/>
            <EditText
                android:id="@+id/Edes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line"
                android:ems="10"
                android:maxLength="30"
                android:layout_marginTop="70dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@drawable/cursor_campaign"
                android:textSize="10sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:id="@+id/upload"
            android:layout_width="105dp"
            android:layout_height="80dp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="15dp"
            android:background="@drawable/thases_line"
            android:visibility="visible">

            <ImageView
                android:id="@+id/Iupload"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="8sp"
                android:background="@drawable/gunung"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/Tupload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/upload"
                android:textAppearance="@style/orga"
                android:textSize="8sp" />
            <TextView
                android:id="@+id/Tlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/photo"
                android:layout_below="@+id/Tupload"
                android:textAppearance="@style/orga"
                android:textSize="8sp" />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>